--- a/package.json
+++ b/package.json
@@ -12,13 +12,14 @@
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-svg-loader": "^3.0.3"
   },
   "devDependencies": {
-    "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "babel-loader": "^9.1.3",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
