--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "embla-carousel-react": "^8.1.8",
+    "embla-carousel-wheel-gestures": "^8.0.1",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
